correct bug with the modal not showing

--- a/views/tab-content/tab-content.css
+++ b/views/tab-content/tab-content.css
@@ -27,6 +27,15 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  cursor: pointer;
+}
+
+.active-btn-view {
+  border: 2px solid #999;
+}
+
+.btn-content:hover{
+  border: 2px solid #555;
 }
 
 .btn-content > p
